Fix spacing at the top of sparql markup

--- a/KnowWE-Essentials/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/KnowWE-Plugin-Core.css
+++ b/KnowWE-Essentials/KnowWE-Plugin-Core/src/main/resources/webapp/KnowWEExtension/css/KnowWE-Plugin-Core.css
@@ -519,6 +519,7 @@ i.knowwe-paginationNavigationIcons {
 .knowwe-paginationToolbar .filter-activator {
 	position: relative;
 	bottom: -1px;
+	margin: 3px 3px 3px 4px;
 }
 
 table.knowwe-pagination th.sortable span {
